feat: repagination, private routes and hidden menu button using type of user

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clinic HUB | Dashboard and application</title>
 
+    <!-- Google Search Console -->
+    <meta
+      name="google-site-verification"
+      content="cNGMsNnn6XnDtQwRDBsJXFWBxgfBnTxev-JriHP-lrI"
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
